Add search blog posts endpoint
